fix mobile styles

--- a/apps/web/styles/custom-embed.css
+++ b/apps/web/styles/custom-embed.css
@@ -54,6 +54,21 @@ p.text-subtle.mt-2.text-sm.font-semibold {
   /* padding-top: 30px !important; */
 }
 
+.custom-mobile-text {
+  font-size: 40px;
+  font-family:
+    Syne Variablefont Wght,
+    sans-serif;
+  font-weight: bold;
+  color: #06c6a3;
+
+  /* padding-top: 30px !important; */
+}
+
+.adjust-title {
+  margin-left: 120px !important;
+}
+
 h1.text-text.text-xl.font-semibold.my-2 {
   font-size: 17px;
   font-family:
