--- a/apps/web/styles/globals.css
+++ b/apps/web/styles/globals.css
@@ -57,11 +57,13 @@
   --cal-radius-full: 9999px;
 
   /* Background Standard */
-  --cal-bg-emphasis: hsla(220, 13%, 91%, 1); /* gray.200 - active items and emphasising */
+  --cal-bg-emphasis: hsla(220, 13%, 91%, 1); /* gray.200 - emphasising */
   --cal-bg: hsla(0, 0%, 100%, 1); /* white - default background */
   --cal-bg-subtle: hsla(220, 14%, 94%, 1); /* gray.100 - hovering on items, subtle raising */
   --cal-bg-muted: hsla(210, 20%, 97%, 1); /* gray.50 - large items, sidebar, sections */
   --cal-bg-inverted: hsla(210, 30%, 4%, 1); /* gray.900 - tooltips */
+  --cal-bg-gradient: linear-gradient(hsla(213, 100%, 97%, 1), hsla(229, 100%, 97%, 1), hsla(270, 100%, 98%, 1));
+  --cal-bg-active: hsla(207, 100%, 45%, 1); /* active tabs */
 
   /* Background Primary */
   --cal-bg-primary: hsla(214, 30%, 16%, 1); /* stone-100 */
@@ -159,6 +161,7 @@
   --cal-bg-subtle: hsla(0, 0%, 15%, 1); /* stone-800 */
   --cal-bg-muted: hsla(0, 0%, 9%, 1); /* stone-900 */
   --cal-bg-inverted: hsla(0, 0%, 98%, 1); /* stone-50 */
+  --cal-id-bg-gradient: linear-gradient(hsla(213, 100%, 97%, 1), hsla(229, 100%, 97%, 1), hsla(270, 100%, 98%, 1));
 
   /* Background Primary */
   --cal-bg-primary: hsla(0, 0%, 96%, 1); /* stone-100 */
@@ -642,4 +645,13 @@ select:focus {
 
 [data-radix-popper-content-wrapper] {
   border: none;
+}
+
+/* TO Remove */
+.bg-cal-gradient {
+  background-image: var(--cal-bg-gradient);
+}
+
+.bg-cal-active {
+  background-color: var(--cal-bg-active);
 }
