--- a/apps/web/styles/raqb.css
+++ b/apps/web/styles/raqb.css
@@ -9,32 +9,34 @@
 }
 
 .cal-query-builder .group-container {
-  padding: 8px !important;
-  border-radius: 16px;
-  border: 1px solid var(--cal-border-muted);
+  padding-bottom: 8px !important;
   background-color: var(--cal-bg);
 }
 
 .cal-query-builder .group--children:not(:empty) {
   background-color: var(--cal-bg);
-  border: 1px solid var(--cal-border-muted);
   border-radius: 10px;
-  padding: 8px;
+  padding-bottom: 8px;
 }
 
 .cal-query-builder .cal-query-builder-container .group-container {
   border: none;
-  padding: 0px;
+  padding: 8px;
 }
 
 .cal-query-builder .group .group--header {
+  justify-content: center;
   margin-left: 8px;
+  color: var(--cal-text-subtle);
+  border-top: 1px solid var(--cal-border-subtle);
+  padding-top: 4px;
+  font-weight: 500;
+  margin-bottom: 16px;
 }
 
 .cal-query-builder .group.group-or-rule:has(.group--header, :not(.group--header)):has(.group--children):has(.group--footer) {
-  background-color: var(--cal-bg-muted);
+  background-color: var(--cal-bg);
   padding: 2px;
-  border-radius: 12px;
 }
 
 
@@ -142,4 +144,12 @@
   .cal-query-builder .rule--value {
     width: 100%;
   }
+}
+
+.cal-query-builder .group--footer .group--actions button.action--ADD-RULE {
+  flex: 1;
+  width: 100%;
+  max-width: none;
+  justify-items: center;
+  display: block;
 }
